# timeRS

./: Cargo.toml  LIMITATIONS.md  README.md
c/: main.c
src/: cli.rs  fmt.rs  main.rs
src/ffi/: convert.rs  mem.rs  mod.rs  real_time.rs
src/ffi/mem/: darwin.rs  linux.rs  mod.rs
src/fmt/: mod.rs  stats.rs  time.rs
