[package]
name = "timers"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.95"
nix = "0.21.0"
os_info = "3.0.6"
lazy_static = "1.4.0"

# [target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies.mach]
# version = "0.3"
