[package]
name = "timers"
version = "0.2.1"
description = "Like GNU's time but in Rust! (timeRS)"
homepage = "https://github.com/acheronfail/timers"
repository = "https://github.com/acheronfail/timers"
keywords = ["time", "measure", "timer", "user", "system"]
categories = ["command-line-utilities"]
authors = ["acheronfail <acheronfail@gmail.com>"]
license = "MPL-2.0"
edition = "2018"

[dependencies]
anyhow = "1.0.41"
bytesize = "1.0.1"
clap = { version = "3.0.0", features = ["cargo", "derive"] }
flexi_logger = { version = "0.18.0", features = ["colors"] }
lazy_static = "1.4.0"
libc = "0.2.95"
log = "0.4.14"
nix = "0.21.0"
os_info = "3.0.6"